# C_Cpp-Coursework

./: .gitignore  README.md  append_lists.c
BasicIf/: gcd  main.c
Complex_Num/: main.c
HelloWorld/: HelloWorld.out  Lec02HelloWorld.c
Lab_Rocket/: Rocket_Landing  main.c  test.txt
lab3/: Nim  main.c  nim.c  nim.h
lab3/Nim.o.dSYM/Contents/: Info.plist
lab4/: Lowpass.out  main.c  my_complex.c  my_complex.h
lab5/: a.out  main.c
lab6/: a.out  bitmap.c  bitmap.h  main.c
lab8/: RectangleExample.h  TestQuestion.h  tester.cpp
lab9/: CMakeLists.txt  Circle.cpp  Circle.hpp  main.cpp  shape.cpp  shape.hpp
tut2/: approx  main.c  roots.c  roots.h
tut3/: Mastermind  main.c
tut4/: a.out  main.c
tut5/: a.out  main.c  test.txt
tut6/: a.out  main.c
tut7/: RightTriangleWithColour.cpp  RightTriangleWithColour.h  a.out  a.txt  main.cpp
tut8/src/: Circle.cpp  Circle.hpp  RightTriangleExample.h  main.cpp  square.cpp  square.h  square.out
tut9/: Polygon_w_color.h  RectangleExample.h  main.cpp
